<resources>
    <string name="app_name">Swing Music</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="sign_up">Sign Up</string>
    <string name="aldready_have_an_account_sign_in">Aldready have an Account? Sign In</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="library">Library</string>
    <string name="artists_for_you">Artists For You</string>
    <string name="arijit_singh">Arijit Singh</string>
    <string name="zyan_malik">Zyan Malik</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="shreya_ghoshal">Shreya Ghoshal</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="armaan_malik">Armaan Malik</string>
    <string name="selena_gomez">Selena Gomez</string>
    <string name="atif_aslam">Atif Aslam</string>
    <string name="justin_bieber">Justin Bieber</string>
    <string name="palak_muchhal">Palak Muchhal</string>
    <string name="bruno_mars">Bruno Mars</string>
    <string name="dua_lipa">Dua Lipa</string>
    <string name="the_weeknd">The Weeknd</string>
    <string name="kishor_kumar">Kishor Kumar</string>
    <string name="drake">Drake</string>
    <string name="ariana_grande">Ariana Grande</string>
    <string name="harry_styles">Harry Styles</string>
    <string name="international_top_hits">International Top Hits</string>
    <string name="stay">Stay</string>
    <string name="justin_bieber2">Justin Bieber</string>
    <string name="blinding_lights">Blinding Lights</string>
    <string name="the_weeknd2">The Weeknd</string>
    <string name="circles">Circles</string>
    <string name="post_malone">Post Malone</string>
    <string name="bad_habits">Bad Habits</string>
    <string name="ed_sheeran2">Ed Sheeran</string>
    <string name="olivia_rodrigo">Olivia Rodrigo</string>
    <string name="levitating">Levitating</string>
    <string name="dua_lipa2">Dua Lipa</string>
    <string name="memories">Memories</string>
    <string name="maroon_5">Maroon 5</string>
    <string name="love_me_like">Love Me Like...</string>
    <string name="ellie_glouding">Ellie Glouding</string>
    <string name="love_your_self">Love Your Self</string>
    <string name="wolves">Wolves</string>
    <string name="star_boy">Star Boy</string>
    <string name="uptown_funk">Uptown Funk</string>
    <string name="something_just">Something just...</string>
    <string name="chainsmokers_coldplay">Chainsmokers, Coldplay</string>
    <string name="believer">Believer</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="havana">Havana</string>
    <string name="camila_cabello">Camila Cabello</string>
    <string name="sugar">Sugar</string>
    <string name="best_hindi_picks">Best Hindi Picks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>